--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.10",
     "expo-dev-client": "~2.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,18 +30,19 @@
     "react-native-calendars": "^1.1295.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.9.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.0.1",
     "react-native-maps": "1.3.2",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.6.0",
+    "react-native-paper-dates": "^0.16.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "expo-image-picker": "~14.1.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
