--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "editor.semanticTokenColorCustomizations": {},
-    "workbench.colorTheme": "Default Dark+"
+    "workbench.colorTheme": "Default Dark Modern"
 }
