--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-calendars": "^1.1295.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.9.0",
-    "react-native-elements": "^3.4.3", 
+    "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.0.1",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.1.2",
@@ -47,7 +47,10 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-notifications": "~0.18.1",
+    "expo-device": "~5.2.1",
+    "expo-permissions": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
