--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "axios": "^1.4.0",
     "expo": "~48.0.10",
     "expo-dev-client": "~2.2.1",
+    "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-notifications": "~0.18.1",
+    "expo-permissions": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "react": "18.2.0",
@@ -33,6 +36,7 @@
     "react-native": "0.71.7",
     "react-native-calendars": "^1.1295.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.0.1",
@@ -47,10 +51,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "expo-notifications": "~0.18.1",
-    "expo-device": "~5.2.1",
-    "expo-permissions": "~14.1.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
